# apollos-ai

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DockerfileLocal  PROJECT_INDEX.json  PROJECT_INDEX.md  README.md  agent.py  alembic.ini  biome.json  initialize.py  jsconfig.json  mise.toml  models.py  pyproject.toml  requirements.txt  run_tunnel.py  run_ui.py
.claude/agents/: security-reviewer.md  test-writer.md
.drift/: manifest.json
.drift/audit/: degradation.json
.drift/indexes/: by-category.json  by-file.json
.drift/views/: pattern-index.json  security-summary.json  status.json
.github/: codeql-config.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  codeql.yml  dependency-review.yml  release.yml
.serena/memories/: architecture_deep_dive.md  codeql_path_injection_fix.md  docker_infrastructure.md  embedding_migration.md  file_browser_security.md  helpers_reference.md  known_upstream_warnings.md  mcp_gateway_implementation.md  project_overview.md  suggested_commands.md  workspace_isolation_v2.md  workspace_root_path_fix.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_mcp_service_registry.py  003_audit_log.py
conf/: rbac_model.conf
deploy/docker/: .env.example  Caddyfile  docker-compose.local.yml  docker-compose.yml  (+1 more)
docs/: README.md
prompts/: agent.extras.agent_info.md  agent.system.tool.mcp_discover.md
tests/: chunk_parser_test.py  conftest.py  email_parser_test.py  rate_limiter_manual.py  test_agent_core.py  test_auth_phase0.py  test_auth_phase1.py  test_branding.py  test_callback_registry.py  test_callback_retry.py  test_docker_mcp_catalog.py  test_fasta2a_client.py  test_file_browser_isolation.py  test_file_tree_visualize.py  test_http_auth_csrf.py  test_integration_models.py  test_jira_callback_delivery.py  test_jira_markup.py  test_mcp_connection_pool.py  test_mcp_container_manager.py  test_mcp_gateway_api.py  test_mcp_gateway_pool_api.py  test_mcp_identity.py  test_mcp_resource_store.py  test_mcp_tool_index.py  test_multi_tab_isolation.py  test_phase2_user_isolation.py  test_phase3_authorization.py  test_phase4a_admin.py  test_phase4b_mcp_client.py  test_phase5_audit.py  test_phase5_cross_tenant.py  test_phase5_login_protection.py  test_phase5_mcp_auth.py  test_run_ui_config.py  test_security.py  test_security_boundaries.py  test_settings_developer_sections.py  test_slack_callback_delivery.py  test_slack_identity.py  (+16 more)
usr/: .env.example
webui/: index.css  index.html  index.js  login.css  login.html
(+271 files in other folders)
