[project]
name = "apollos-ai"
version = "0.4.1"
description = "Relentlessly optimistic executive personal assistant agentic AI framework"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12,<3.14"

dependencies = [
    "a2wsgi>=1.10.8",
    "ansio>=0.0.1",
    "beautifulsoup4>=4.12.3",
    "boto3>=1.35.0",
    "browser-use==0.5.11",
    "crontab>=1.0.1",
    "docker>=7.1.0",
    "duckduckgo-search>=6.1.12",
    "exchangelib>=5.4.3",
    "faiss-cpu==1.11.0",
    "fasta2a>=0.5.0",
    "fastmcp>=3.0.0rc1,<4.0",
    "flaredantic>=0.1.5",
    "flask[async]>=3.0.3",
    "GitPython>=3.1.43",
    "html2text>=2024.2.26",
    "imapclient>=3.0.1",
    "inputimeout>=1.0.4",
    "kokoro>=0.9.2",
    "langchain-community==0.3.19",
    "langchain-core==0.3.49",
    "langchain-unstructured>=0.1.6",
    "litellm==1.79.3",
    "lxml-html-clean>=0.3.1",
    "markdown>=3.7",
    "markdownify>=1.1.0",
    "mcp>=1.24.0,<2.0",
    "nest-asyncio>=1.6.0",
    "openai==1.99.5",
    "openai-whisper>=20250625",
    "paramiko>=3.5.0",
    "pathspec>=0.12.1",
    "pdf2image>=1.17.0",
    "playwright>=1.52.0",
    "psutil>=7.0.0",
    "pydantic==2.11.7",
    "pymupdf>=1.25.3",
    "pypdf>=6.0.0",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.1.0",
    "python-socketio>=5.14.2",
    "pytz>=2024.2",
    "pywinpty==3.0.2; sys_platform == 'win32'",
    "sentence-transformers==3.0.1",
    "simpleeval>=1.0.3",
    "soundfile>=0.13.1",
    "tiktoken>=0.8.0",
    "unstructured[all-docs]>=0.16.23",
    "unstructured-client>=0.31.0",
    "uvicorn>=0.38.0",
    "webcolors>=24.6.0",
    "wsproto>=1.2.0",
    "flask-limiter>=4.1.1",
    "flask-cors>=6.0.2",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "argon2-cffi>=25.1",
    "msal>=1.34.0",
    "casbin>=1.43.0",
    "casbin-sqlalchemy-adapter>=1.4.0",
    "psycopg2-binary>=2.9.11",
    "pgvector>=0.3.6",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-timeout>=2.4.0",
]

[tool.uv]
# Override browser-use's pin on openai==1.99.2; litellm needs >=1.99.5
override-dependencies = ["openai==1.99.5"]

[tool.ruff.lint.per-file-ignores]
# Tests manipulate sys.path before importing project modules
"tests/*" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
timeout = 60
pythonpath = ["."]
